2005-01-03  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in (inst_docdir): For Cygwin target set to share/doc/.

2005-01-02  Earnie Boyd  <earnie@users.sf.net>

	* include/_mingw.h: Increment version to 3.6
	* Makefile.in: Ditto

2004-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/complex/(cabsf.c cacosf.c cacoshf.c cargf.c casinf.c
	casinhf.c catanf.c catanhf.c ccosf.c ccoshf.c cexpf.c cimagf.c
	clogf.c cpowf.c cprojf.c crealf.c csinf.c csinhf.c csqrtf.c
	ctanf.c ctanhf.c): New files.
	* mingwex/Makefile.in (COMPLEX_DISTFILES): Adjust.
	(COMPLEX_OBJS(: Adjust.
	* include/complex.h (cabsf, cacosf, cacoshf, cargf, casinf. 
	casinhf, catanf, catanhf, ccosf, ccoshf, cexpf, cimagf, clogf,
	cpowf, cprojf, crealf, csinf, csinhf, csqrtf, ctanf, ctanhf):
	Declare.

2004-12-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wchar.h (wcsdup): Correct prototype.
	* include/string.h (wcsdup): Correct prototype.

2004-10-14  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sys/stat.h: Make S_ISLNK comment comply with ISO C90.

2004-10-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/fastmath.h: New file.
	* mingwex/math/asinh.c: New file.
	* mingwex/math/asinhf.c: New file.
	* mingwex/math/asinhl.c: New file.
	* mingwex/math/acosh.c: New file.
	* mingwex/math/acoshf.c: New file.
	* mingwex/math/acoshl.c: New file.
	* mingwex/math/atanh.c: New file.
	* mingwex/math/atanhf.c: New file.
	* include/math.h (asinh, asinhf, asinhl, acosh, acoshf, acoshl,
	atanh, atanhf, atanhl): Add prototypes.
	* mingwex/Makefile.in (MATH_OBJS): Add objects for above to list.
	(MATH_DISTFILES): Add sources for above and fastmath.h to list.
	Specify dependency on fastmath.h for new objects.

2004-09-08  Earnie Boyd  <earnie@users.sf.net>

	* include/sys/stat.h (_S_IFLNK): Add definition.
	(S_IFLNK) Ditto.
	(_lstat) Ditto.
	(lstat) Ditto.
	(_S_ISLNK) Recode.
	(S_ISLNK) Ditto.

2004-09-08  Earnie Boyd  <earnie@users.sf.net>
