@@ -1,3 +1,7 @@
+2005-01-06  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/stdio.h (P_tmpdir): Add define.
+
 2005-01-03  Earnie Boyd  <earnie@users.sf.net>
 
 	* Makefile.in (inst_docdir): For Cygwin target set to share/doc/.
